Patient interface done
Patient interface done

--- a/NursingHomeApp/App.config
+++ b/NursingHomeApp/App.config
@@ -12,7 +12,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="NursingHomeEntities" connectionString="metadata=res://*/NursingHomeModel.csdl|res://*/NursingHomeModel.ssdl|res://*/NursingHomeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-REDOM51\KREDKOSQL;initial catalog=NursingHome;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+<connectionStrings><add name="NursingHomeEntities" connectionString="metadata=res://*/NursingHomeModel.csdl|res://*/NursingHomeModel.ssdl|res://*/NursingHomeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-REDOM51\KREDKOSQL;initial catalog=NursingHome;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
