--- a/NursingHomeApp/NursingHomeApp.csproj
+++ b/NursingHomeApp/NursingHomeApp.csproj
@@ -79,14 +79,13 @@
     <Compile Include="Forms\PatientsForm.Designer.cs">
       <DependentUpon>PatientsForm.cs</DependentUpon>
     </Compile>
-
     <Compile Include="Forms\RehabilitatorForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\RehabilitatorForm.Designer.cs">
       <DependentUpon>RehabilitatorForm.cs</DependentUpon>
     </Compile>
-
+    <Compile Include="Mapper\MapperProfile.cs" />
     <Compile Include="Medicine.cs">
       <DependentUpon>NursingHomeModel.tt</DependentUpon>
     </Compile>
@@ -146,15 +145,12 @@
     <Compile Include="Treatment.cs">
       <DependentUpon>NursingHomeModel.tt</DependentUpon>
     </Compile>
-    
     <Compile Include="Views\EmployeeView.cs" />
     <Compile Include="Views\PatientView.cs" />
     <Compile Include="Views\ScheduleView.cs" />
-
     <EmbeddedResource Include="Forms\NurseForm.resx">
       <DependentUpon>NurseForm.cs</DependentUpon>
     </EmbeddedResource>
-
     <EmbeddedResource Include="Forms\PatientsForm.resx">
       <DependentUpon>PatientsForm.cs</DependentUpon>
     </EmbeddedResource>
