--- a/NursingHomeApp/NursingHomeApp.csproj
+++ b/NursingHomeApp/NursingHomeApp.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Systems\DataManagers\Interfaces\ITreatmentDataManger.cs" />
     <Compile Include="Systems\DataManagers\MedicineDataManger.cs" />
     <Compile Include="Systems\DataManagers\PatientDataManager.cs" />
+    <Compile Include="Systems\DataManagers\TreatmentDataManager.cs" />
     <Compile Include="Treatment.cs">
       <DependentUpon>NursingHomeModel.tt</DependentUpon>
     </Compile>
