--- a/NursingHomeApp/NursingHomeApp.csproj
+++ b/NursingHomeApp/NursingHomeApp.csproj
@@ -149,18 +149,16 @@
     <Compile Include="Systems\DataManagers\Interfaces\IRoomDataManger.cs" />
     <Compile Include="Systems\DataManagers\Interfaces\IScheduleDataManger.cs" />
     <Compile Include="Systems\DataManagers\Interfaces\ITreatmentDataManger.cs" />
-    <Compile Include="Systems\DataManagers\MedicineDataManger.cs" />
+    <Compile Include="Systems\DataManagers\MedicineDataManager.cs" />
     <Compile Include="Systems\DataManagers\PatientDataManager.cs" />
-
     <Compile Include="Systems\DataManagers\PatientMedicineDataManager.cs" />
-
     <Compile Include="Systems\DataManagers\TreatmentDataManager.cs" />
-
     <Compile Include="Treatment.cs">
       <DependentUpon>NursingHomeModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Views\EmployeeView.cs" />
     <Compile Include="Views\MedicineView.cs" />
+    <Compile Include="Views\NursePatientsView.cs" />
     <Compile Include="Views\PatientMedicineView.cs" />
     <Compile Include="Views\PatientView.cs" />
     <Compile Include="Views\ScheduleView.cs" />
