--- a/NursingHomeApp/NursingHomeApp.csproj
+++ b/NursingHomeApp/NursingHomeApp.csproj
@@ -152,10 +152,13 @@
     </Compile>
     <Compile Include="Systems\DataManagers\DefaultDataManager.cs" />
     <Compile Include="Systems\DataManagers\EmployeeDataManager.cs" />
+    <Compile Include="Systems\DataManagers\EmployeeLoginDataManager.cs" />
     <Compile Include="Systems\DataManagers\Interfaces\IDefaultDataManager.cs" />
     <Compile Include="Systems\DataManagers\Interfaces\IEmployeeDataManager.cs" />
+    <Compile Include="Systems\DataManagers\Interfaces\IEmployeeLoginDataManager.cs" />
     <Compile Include="Systems\DataManagers\Interfaces\IMedicineDataManger.cs" />
     <Compile Include="Systems\DataManagers\Interfaces\IPatientDataManager.cs" />
+    <Compile Include="Systems\DataManagers\Interfaces\IPatientLoginDataManager.cs" />
     <Compile Include="Systems\DataManagers\Interfaces\IPatientMedicineDataManger.cs" />
     <Compile Include="Systems\DataManagers\Interfaces\IPlaceDataManger.cs" />
     <Compile Include="Systems\DataManagers\Interfaces\IProfessionDataManger.cs" />
@@ -164,6 +167,7 @@
     <Compile Include="Systems\DataManagers\Interfaces\ITreatmentDataManger.cs" />
     <Compile Include="Systems\DataManagers\MedicineDataManager.cs" />
     <Compile Include="Systems\DataManagers\PatientDataManager.cs" />
+    <Compile Include="Systems\DataManagers\PatientLoginDataManager.cs" />
     <Compile Include="Systems\DataManagers\PatientMedicineDataManager.cs" />
     <Compile Include="Systems\DataManagers\PlaceDataManager.cs" />
     <Compile Include="Systems\DataManagers\RoomDataManager.cs" />
