--- a/NursingHomeApp/NursingHomeApp.csproj
+++ b/NursingHomeApp/NursingHomeApp.csproj
@@ -174,6 +174,9 @@
     <Compile Include="Systems\DataManagers\ScheduleDataManager.cs" />
     <Compile Include="Systems\DataManagers\TreatmentDataManager.cs" />
     <Compile Include="Systems\LogicalManagers\PatientManager.cs" />
+    <Compile Include="Systems\LogicalManagers\PlaceManager.cs" />
+    <Compile Include="Systems\LogicalManagers\ScheduleManager.cs" />
+    <Compile Include="Systems\LogicalManagers\TreatmentManager.cs" />
     <Compile Include="Treatment.cs">
       <DependentUpon>NursingHomeModel.tt</DependentUpon>
     </Compile>
