--- a/NursingHomeApp/NursingHomeApp.csproj
+++ b/NursingHomeApp/NursingHomeApp.csproj
@@ -178,9 +178,9 @@
     <Compile Include="Systems\LogicalManagers\PatientManager.cs" />
     <Compile Include="Systems\LogicalManagers\PatientMedicineManager.cs" />
     <Compile Include="Systems\LogicalManagers\PlaceManager.cs" />
+    <Compile Include="Systems\LogicalManagers\RoomManager.cs" />
     <Compile Include="Systems\LogicalManagers\ScheduleManager.cs" />
     <Compile Include="Systems\LogicalManagers\TreatmentManager.cs" />
-
     <Compile Include="Treatment.cs">
       <DependentUpon>NursingHomeModel.tt</DependentUpon>
     </Compile>
