AdministratorForm using only LogicalManagers
AdministratorForm using only LogicalManagers

--- a/NursingHomeApp/App.config
+++ b/NursingHomeApp/App.config
@@ -16,6 +16,6 @@
   </entityFramework>
 <connectionStrings><add name="NursingHomeEntities"
 
-connectionString="metadata=res://*/NursingHomeModel.csdl|res://*/NursingHomeModel.ssdl|res://*/NursingHomeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-0U6E25D\KREDEKSQL;initial catalog=NursingHome;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+connectionString="metadata=res://*/NursingHomeModel.csdl|res://*/NursingHomeModel.ssdl|res://*/NursingHomeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-8GPSSUD9\KREDEKSQL;initial catalog=NursingHome;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
 
 providerName="System.Data.EntityClient"/></connectionStrings></configuration>
